# couple-crows

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: crow2.glb
assets/objects/: crow1.glb
assets/shaders/: boids.wgsl  boids_grid.wgsl  instancing.wgsl
blender/: crow_with_animation.blend  crow_with_animation.blend1  lod.blend
src/: boid_movement.rs  compute_plugin.rs  grid_architecture.rs  instancing_plugin.rs  main.rs  shader_instancing.rs  shader_instancing_easy.rs  shared.rs
