[package]
name = "crows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Remove Dynamic linking when releasing
bevy = { version = "0.12.0", features = ["dynamic_linking"]}
rand = "0.8.5"
bevy_app_compute = {git = "https://github.com/Kjolnyr/bevy_app_compute.git" }
bytemuck = "1.14.0"
bevy_panorbit_camera = "0.9.2"
# wgpu = { version = "0.17.1", features = ["naga"] }
