[package]
name = "crows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Remove Dynamic linking when releasing
# bevy = { version = "0.12.1", features = ["dynamic_linking"]}
bevy = { version = "0.12.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
] }
rand = "0.8.5"
#bevy_app_compute = { git = "https://github.com/Kjolnyr/bevy_app_compute" }
bevy_app_compute = {git = "https://github.com/Roeliefantje/bevy_app_compute.git" }
bytemuck = "1.14.0"
bevy_panorbit_camera = "0.9.2"
# wgpu = { version = "0.17.1", features = ["naga"] }
